# shapatar-bot-semantic

./: .gitignore  README.md  brain.py  data.py  embeddings.py  intent_examples.py  main.py  pyproject.toml  requirements.txt  test_bot_evaluation.py  test_dataset.py
