[project]
name = "shapatar-bot-semantic"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "anyio==4.13.0",
    "certifi==2026.5.20",
    "click==8.4.1",
    "colorama==0.4.6",
    "filelock==3.29.0",
    "fsspec==2026.4.0",
    "h11==0.16.0",
    "hf-xet==1.5.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.17.0",
    "idna==3.17",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "packaging==26.2",
    "pygments==2.20.0",
    "python-dotenv>=1.2.2",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "rich==15.0.0",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "sentence-transformers==5.5.1",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.12.0",
    "tqdm==4.67.3",
    "transformers==5.9.0",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
]
